package ui;

/**
 * Abstract class {@code Menu}. Defines the common behaviours of the system's menus.
 *
 * @author Wang Ruisi
 */
public abstract class Menu {
    /**
     * Shows the menu.
     */
    public abstract void enter();
}
